Refactor towards latest architecture design
